--- a/TechBee_Training/src/main/resources/application.properties
+++ b/TechBee_Training/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 spring.datasource.url= jdbc:postgresql://ricokali.ckuntkkb5qk9.us-east-1.rds.amazonaws.com:5432/postgres
 #spring.datasource.url= jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username= postgres
-spring.datasource.password= galaxy39
+spring.datasource.password= 
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
