--- a/TechBee_Training/src/main/resources/application.properties
+++ b/TechBee_Training/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 
 spring.datasource.url= jdbc:postgresql://ricokali.ckuntkkb5qk9.us-east-1.rds.amazonaws.com:5432/postgres
 #spring.datasource.url= jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username= postgres
-spring.datasource.password= 
+spring.datasource.username= ${DBUSERNAME}
+spring.datasource.password= ${DBPASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -13,4 +13,4 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 management.endpoints.web.exposure.include= *
-server.port = 8081
+server.port = 8082
