--- a/TechBee_Training/bin/src/main/resources/application.properties
+++ b/TechBee_Training/bin/src/main/resources/application.properties
@@ -2,10 +2,10 @@
 
 spring.datasource.url= jdbc:postgresql://ricokali.ckuntkkb5qk9.us-east-1.rds.amazonaws.com:5432/postgres
 #spring.datasource.url= jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username= postgres
-spring.datasource.password= galaxy39
+spring.datasource.username= ${DBUSERNAME}
+spring.datasource.password= ${DBPASSWORD}
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.show-sql=true;
 #sprint.jpa.properties.hibernate.format_sql=true
@@ -13,4 +13,4 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 management.endpoints.web.exposure.include= *
-server.port = 8081
+server.port = 8082
