--- a/AppMS/pom.xml
+++ b/AppMS/pom.xml
@@ -9,8 +9,10 @@
 	<name>AppMS</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
+		<maven.compiler.release>11</maven.compiler.release>
 		<java.version>11</java.version>
 	</properties>
+	<!-- <properties> <java.version>11</java.version> </properties> -->
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
 		<dependency>
@@ -26,23 +28,16 @@
 			<version>2.7.5</version>
 		</dependency>
 
-		<!-- <dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId>
-			<version>4.1.4.Final</version>
-		</dependency> -->
-<!-- 
+		<!-- <dependency> <groupId>org.hibernate</groupId> <artifactId>hibernate-core</artifactId> 
+			<version>4.1.4.Final</version> </dependency> -->
+		<!-- <dependency> <groupId>org.hibernate</groupId> <artifactId>hibernate-entitymanager</artifactId> 
+			<version>5.2.3.Final</version> </dependency> -->
+		<!-- If you do not add hibernate dependencies use this -->
 		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-entitymanager</artifactId>
-			<version>5.2.3.Final</version>
-		</dependency> -->
-	<!-- If you do not add hibernate dependencies use this -->
-		 <dependency>
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
 			<version>2.3.0</version>
-		</dependency> 
+		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
 		<dependency>
