--- a/AppMS/src/main/resources/application.properties
+++ b/AppMS/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url= jdbc:postgresql://ricokali.ckuntkkb5qk9.us-east-1.rds.ama
 spring.datasource.username= ${DBUSERNAME}
 spring.datasource.password= ${DBPASSWORD}
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.show-sql=true;
 #sprint.jpa.properties.hibernate.format_sql=true
